--- a/assets/main.scss
+++ b/assets/main.scss
@@ -2,8 +2,11 @@
 //   font-family: PunkRocker;
 //   src: url('~assets/PunkRocker.otf');
 //   }
+@font-face {
+  font-family: Capture it;
+  src: url('~assets/font/Captureit.ttf');
+}
 
-@import url(http://allfont.es/allfont.css?fonts=capture-it);
 
 html{
     
